<resources>
    <string name="app_name">WGU CourseTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WGU CourseTracker</string>
    <string name="nav_header_subtitle">Version 1.0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="clear_all">Delete all terms</string>

    <string name="nav_share_header">Share with others</string>
    <string name="nav_term_list">Term List</string>
    <string name="nav_course_list">Course List</string>
    <string name="nav_assessment_list">Assessment List</string>
    <string name="nav_about">About</string>
    <string name="nav_share">Share</string>
    <string name="term_title">%1$s</string>
    <string name="term_dates">%1$s &#8211; %2$s</string>
    <string name="date_start">%1$s</string>
    <string name="date_hyphen"> &#8211; </string>
    <string name="date_end">%1$s</string>
    <string name="term_progress">(%1$d/%2$d)</string>
    <string name="course_title">%1$s</string>
    <string name="title_activity_term_details">Term Details</string>
    <string name="edit_term">Edit term</string>
    <string name="term_notes_hint">Enter notes here!</string>
    <string name="course_description">%1$s</string>
    <string name="title_activity_course">Course Details</string>
    <string name="assessment_passed">Status: %1$s</string>
    <string name="assessment_course">Course: %1$s</string>
    <string name="course_assessments">Assessments: %1$s</string>
    <string name="course_term">Term: %1$s</string>
    <string name="course_credits">Credits: %1$d</string>
    <string name="title_activity_assessment">Assessment Details</string>
    <string name="title_activity_course_list">Course List</string>
    <string name="title_activity_assessment_list">Assessment List</string>
</resources>