<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/course_assessment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintDimensionRatio="1:1"
        android:padding="5dp"
        android:id="@+id/assessment_icon"
        android:src="@drawable/ic_assessment"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/course_title"
        android:id="@+id/assessment_title"
        app:layout_constraintStart_toEndOf="@id/assessment_icon"
        app:layout_constraintTop_toTopOf="@id/assessment_icon"
        app:layout_constraintBottom_toBottomOf="@id/assessment_icon"
        app:layout_constraintEnd_toStartOf="@id/assessment_course"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No due date set"
        android:id="@+id/assessment_due_date"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/assessment_icon"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_title"
        android:id="@+id/assessment_description"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/assessment_due_date"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_title"
        android:id="@+id/assessment_notes"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/assessment_description"
        android:padding="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assessment_passed"
        android:id="@+id/assessment_passed"
        android:padding="2dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toStartOf="@id/delete_button"
        app:layout_constraintTop_toBottomOf="@id/assessment_course"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/assessment_course"
        android:text="@string/assessment_course"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintTop_toTopOf="@id/assessment_icon"
        app:layout_constraintBottom_toBottomOf="@id/assessment_icon"
        app:layout_constraintEnd_toStartOf="@id/delete_button"/>

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="Delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_divider"
        android:background="@color/red"
        tools:ignore="HardcodedText"
        android:visibility="gone"/>

    <View style="@style/HorizontalDivider"
        android:id="@+id/bottom_divider"
        app:layout_constraintTop_toBottomOf="@id/assessment_notes"/>

</android.support.constraint.ConstraintLayout>